# open_voice_input

./: AGENTS.md  README.md  audio_capture.py  global_hotkey.py  keyboard_injector.py  main.py  pyproject.toml  realtime_file.py  test.py  voice_input_daemon.py  websocket_asr.py
